force-app/main/default/objects/DataTableMetadata__mdt/DataTableMetadata__mdt.object-meta.xml
<CustomObject>
    <description>Used for Managing the Datatable</description>
    <label>DataTableMetadata</label>
    <pluralLabel>DataTableMetadatas</pluralLabel>
</CustomObject>