force-app/main/default/objects/DataTableMetadata__mdt/fields/Callout_Name__c.field-meta.xml
<CustomField>
    <fullName>Callout_Name__c</fullName>
    <label>Callout Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>