force-app/main/default/objects/DataTableMetadata__mdt/fields/KeyField__c.field-meta.xml
<CustomField>
    <fullName>KeyField__c</fullName>
    <label>KeyField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>