force-app/main/default/objects/DataTableMetadata__mdt/fields/Table_Columns__c.field-meta.xml
<CustomField>
    <fullName>Table_Columns__c</fullName>
    <label>Table Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>